[package]
name = "purge-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
quiche = "0.20"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

