[package]
name = "ingestion-service"
version = "1.0.0"
edition = "2021"
authors = ["StreamVerse Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
aws-sdk-s3 = "1.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
kafka = "0.10"
reqwest = { version = "0.11", features = ["json"] }
ffmpeg-next = "6.0"
gstreamer = "0.21"
webrtc = "0.9"
dashmap = "5.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
